# keyval-store

./: .gitignore  Cargo.toml  README.md  benchmark.py  build.rs  deploy.md  deploy.py  keyval.service  pythonTest.py
benches/: benchmark.rs
examples/: esp32.ino  python.py
examples/rust/: Cargo.toml
examples/rust/src/: main.rs
src/: app_state.rs  db.rs  lib.rs  main.rs
tests/: integration.rs
webfiles/: sitemap.txt  styles.css
